Fixed a z-indexing problem with the header

--- a/css/common.css
+++ b/css/common.css
@@ -26,7 +26,7 @@ a:hover {
     top: 0;
     width: 100%;
     overflow: hidden;
-    z-index: 1;
+    z-index: 999;
     height: 42px;
 }
 
