--- a/css/index.css
+++ b/css/index.css
@@ -60,7 +60,7 @@
     -webkit-filter: blur(5px) brightness(80%);
     filter: blur(5px) brightness(80%);
     min-width: 100%;
-    min-height: 100%
+    min-height: 100%;
 }
 
 .overlay-img {
@@ -70,7 +70,6 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
-    z-index: 100;
 }
 
 .subtitle {
@@ -80,7 +79,6 @@
     bottom: 0;
     height: 0px;
     background-color: #33333399;
-    z-index: 101;
     color: white;
     transition: height 0.1s linear;
 }
